@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.gamereactor.dk" version="1.0.0" name="Gamereactor GRTV" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.gamereactor.dk" version="2.0.0" name="Gamereactor GRTV" provider-name="twinther">
     <requires>
-        <import addon="xbmc.python" version="2.0"/>
+        <import addon="xbmc.python" version="2.1.0"/>
+        <import addon="script.module.buggalo" version="1.1.2"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
@@ -13,5 +14,9 @@
         <description lang="da">Gamereactor er Nordens største gaming site, som bringer nyheder og anmeldelser af de nyeste spil.[CR][CR]Har du kommentarer, ris eller ros til denne addon er du velkommen til at deltage i debatten på min blog på http://tommy.winther.nu</description>
         <license>GPL 2.0</license>
         <platform>all</platform>
+        <language>da</language>
+        <email>tommy@winther.nu</email>
+        <website>http://tommy.winther.nu</website>
+        <source>https://github.com/xbmc-danish-addons/plugin.video.gamereactor.dk</source>
     </extension>
 </addon>
